# CrabGPT

./: Cargo.toml  README.md
data/: simple.json
docs/: embedding.md  forward.md  print-tensor.md
examples/: main.rs
src/: activation.rs  attention.rs  embeddings.rs  forward.rs  lib.rs  main.rs  norm.rs  pe.rs  position_encoding.rs  transformer.rs
